--- a/src/components/userLayoutComponent/changePassword/index.scss
+++ b/src/components/userLayoutComponent/changePassword/index.scss
@@ -70,7 +70,7 @@
   width: 100%;
   background-color: #ccc;
 }
-.form-container {
+.form-container1 {
   width: 100%;
   max-width: 400px;
   margin-top: 20px;
