--- a/src/components/userLayoutComponent/order/index.scss
+++ b/src/components/userLayoutComponent/order/index.scss
@@ -2,7 +2,8 @@
   background-color: #f0f2f5;
   padding: 0;
   min-height: 100vh;
- max-width: 1600px;
+  max-width: 100%;
+  margin: 0 auto;
 
 
   .orders-header-section {
